# comsa_claude

./: .coverage  .gitignore  .gitmodules  ACTUAL_PERFORMANCE_RESULTS.md  CLAUDE.md  DOCKER_USAGE.md  Dockerfile  ENSEMBLE_USAGE.md  FINAL_ENSEMBLE_ANALYSIS_REPORT.md  INITIAL.md  NEXT_STEPS_IM-053.md  NEXT_STEPS_TASK052.md  NEXT_STEPS_TASK48.md  NEXT_STEPS_TASK51.md  NEXT_STEPS_TASK52.md  NEXT_STEPS_TASK53.md  NEXT_STEPS_TASK_IM057.md  PHMRC_VA_Dataset_Analysis.md  PLANNING.md  README.md  RESEARCH_FIND.md  TABULA_8B_TECHNICAL_REPORT.md  TABULA_IMPLEMENTATION_PLAN.md  TASK.md  TASK045_xgboost_baseline.md  analysis_results.json  baseline_data_split_module.md  build-docker.sh  conftest.py  hyperparameter_analysis.py  hyperparameter_analysis_report.md  pyproject.toml  run_va34_comparison.py  tabicl_performance_analysis.md  test_categorical_nb_integration.py  test_complete_flow.py  test_label_issue.py  test_ray_tuning.py  test_tabicl_diagnostics.py  test_timing_quick.sh  (+2 more)
.claude/: settings.local.json
PRPs/: ap-only-insilico-evaluation.md  baseline_data_splitting_feature.md  bootstrap_ci_fix.md  categorical-nb-baseline-model.md  fix-bootstrap-confidence-intervals.md  hyperparameter-tuning-all-models.md  hyperparameter-tuning.md  insilico_model_implementation.md  optimize_va_comparison_with_prefect_ray.md  task-047-logistic-regression.md  task-im046-random-forest-baseline.md  task-im057-xgboost-medical-priors.md  task-rd018-xgboost-insilico-analysis.md  va34_site_comparison.md  va_data_processing_pipeline.md  xgboost_baseline.md
baseline/: DATA_SPLITTING_FEATURE.md  __init__.py  (+8 more)
(+515 files in other folders)
